[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphpop-cli"
version = "0.1.0"
description = "Graph database-native population genomics CLI with O(V*K) complexity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jianfeng Mao"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["population-genomics", "graph-database", "neo4j", "bioinformatics", "genetics"]
dependencies = [
    "click>=8.0",
    "neo4j>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.5",
    "numpy>=1.22",
]

[project.urls]
Homepage = "https://github.com/jfmao/GraphPop"
Repository = "https://github.com/jfmao/GraphPop"
Issues = "https://github.com/jfmao/GraphPop/issues"

[project.scripts]
graphpop = "graphpop_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
