[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphpop-mcp"
version = "0.1.0"
description = "MCP server exposing GraphPop population genomics procedures to AI agents"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "mcp>=1.0",
]

[project.scripts]
graphpop-mcp = "graphpop_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
